--- a/letsencrypt-win-simple/win-acme.csproj
+++ b/letsencrypt-win-simple/win-acme.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Plugins\Base\NullTargetFactory.cs" />
     <Compile Include="Plugins\Base\NullValidationFactory.cs" />
     <Compile Include="Plugins\InstallationPlugins\IISFtpInstaller.cs" />
+    <Compile Include="Plugins\InstallationPlugins\PowerShellInstaller.cs" />
     <Compile Include="Plugins\Interfaces\IInstallationPlugin.cs" />
     <Compile Include="Plugins\Interfaces\IInstallationPluginFactory.cs" />
     <Compile Include="Plugins\Interfaces\IStorePlugin.cs" />
@@ -352,6 +353,7 @@
     <Compile Include="Plugins\Resolvers\InteractiveResolver.cs" />
     <Compile Include="Plugins\Interfaces\IResolver.cs" />
     <Compile Include="Plugins\Resolvers\UnattendedResolver.cs" />
+    <Compile Include="Plugins\StorePlugins\AzureCertificateStore.cs" />
     <Compile Include="Plugins\TargetPlugins\IISBinding.cs" />
     <Compile Include="Plugins\TargetPlugins\IISSite.cs" />
     <Compile Include="Plugins\TargetPlugins\IISSites.cs" />
@@ -359,7 +361,7 @@
     <Compile Include="Plugins\TargetPlugins\Manual.cs" />
     <Compile Include="Plugins\ValidationPlugins\BaseHttpValidation.cs" />
     <Compile Include="Plugins\ValidationPlugins\BaseValidation.cs" />
-    <Compile Include="Plugins\ValidationPlugins\Http\AzureWebAppHosting.cs" />
+    <Compile Include="Plugins\ValidationPlugins\Http\ManualSelfHosting.cs" />
     <Compile Include="Plugins\ValidationPlugins\Http\IIS.cs" />
     <Compile Include="Plugins\ValidationPlugins\BaseTlsValidation.cs" />
     <Compile Include="Plugins\ValidationPlugins\Dns\Azure.cs" />
